<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/layout_header"
            layout="@layout/layout_header"/>

        <ImageView
            android:id="@+id/img"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_marginTop="@dimen/margin_top_large"
            android:src="@drawable/background3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_header" />

        <TextView
            android:id="@+id/title_login"
            android:textColor="@color/blue_end"
            android:textSize="@dimen/large_text_view_size"
            android:text="@string/login_title"
            android:layout_marginTop="@dimen/margin_top_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/edit_text_username"
            android:textSize="@dimen/normal_text_view_size"
            android:inputType="text"
            android:hint="@string/text_username"
            android:padding="@dimen/padding_normal"
            android:drawableLeft="@drawable/ic_baseline_person_24"
            android:background="@color/background_edit_text"
            android:layout_marginTop="@dimen/margin_top_small"
            android:layout_marginRight="@dimen/margin_right_normal"
            android:layout_marginLeft="@dimen/margin_left_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <EditText
            android:id="@+id/edit_text_pass"
            android:textSize="@dimen/normal_text_view_size"
            android:inputType="textPassword"
            android:hint="@string/text_pass"
            android:padding="@dimen/padding_normal"
            android:drawableLeft="@drawable/ic_baseline_lock_24"
            android:background="@color/background_edit_text"
            android:layout_marginTop="@dimen/margin_top_small"
            android:layout_marginRight="@dimen/margin_right_normal"
            android:layout_marginLeft="@dimen/margin_left_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="50dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="271dp"
            android:layout_height="50dp"
            android:layout_marginLeft="@dimen/margin_left_normal"
            android:layout_marginTop="12dp"
            android:layout_marginRight="@dimen/margin_right_normal"
            android:background="@drawable/btn_gradient"
            android:text="@string/login_title"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_view_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_text_pass" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/fingerprint"
            android:layout_width="52dp"
            android:layout_height="46dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.367"
            app:layout_constraintStart_toEndOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_pass"
            app:layout_constraintVertical_bias="0.214"
            app:srcCompat="?android:attr/fingerprintAuthDrawable"
            android:contentDescription="TODO"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/noticeFinger"
            android:layout_width="259dp"
            android:layout_height="53dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>